--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Great Idea - Responsive I</title>
-
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -34,7 +33,7 @@
         <button class="get-started">Get Started</button>
       </div>
       <div class="header-img">
-        <!-- <img src="img/header-img.png" alt="Image of a code snippet."> -->
+        <img src="img/header-img.png" alt="Image of a code snippet.">
       </div>
     </header>
     <hr>
@@ -51,7 +50,7 @@
       </div>
     </section>
     <section class="second-section">
-      <!-- <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen"> -->
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     </section>
     <section class="third-section">
       <div class="col-3 mr">
